Add verify message with Ignite CLI
