# docs/static/openapi.yml
@@ -3549,12 +3549,48 @@ paths:
                   authority is the address that controls the module (defaults to
                   x/gov unless overwritten).
               params:
-                description: |-
-                  params defines the module parameters to update.
-
-                  NOTE: All parameters must be supplied.
+                description: 'NOTE: All parameters must be supplied.'
                 type: object
             description: MsgUpdateParams is the Msg/UpdateParams request type.
+      tags:
+        - Msg
+  /lambchain.lambchain.Msg/Verify:
+    post:
+      operationId: LambchainLambchainMsg_Verify
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              creator:
+                type: string
+              proof:
+                type: string
       tags:
         - Msg
 definitions:
@@ -5341,10 +5377,7 @@ definitions:
           authority is the address that controls the module (defaults to x/gov
           unless overwritten).
       params:
-        description: |-
-          params defines the module parameters to update.
-
-          NOTE: All parameters must be supplied.
+        description: 'NOTE: All parameters must be supplied.'
         type: object
     description: MsgUpdateParams is the Msg/UpdateParams request type.
   lambchain.lambchain.MsgUpdateParamsResponse:
@@ -5352,6 +5385,15 @@ definitions:
     description: |-
       MsgUpdateParamsResponse defines the response structure for executing a
       MsgUpdateParams message.
+  lambchain.lambchain.MsgVerify:
+    type: object
+    properties:
+      creator:
+        type: string
+      proof:
+        type: string
+  lambchain.lambchain.MsgVerifyResponse:
+    type: object
   lambchain.lambchain.Params:
     type: object
     description: Params defines the parameters for the module.
